--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SPACET</title>
-    <link rel="stylesheet" href="/00.Website/assets/css/styles.css">
+    <link rel="stylesheet" href="./00.Website/assets/css/styles.css">
     <script src="/00.Website/assets/scripts/app.js" defer></script>
 </head>
 <body id="top">
