--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SPACET</title>
-    <link rel="stylesheet" href="./00.Website/assets/css/styles.css">
-    <script src="/00.Website/assets/scripts/app.js" defer></script>
+    <link rel="stylesheet" href="styles.css">
+    <script src="app.js" defer></script>
 </head>
 <body id="top">
     <header>
@@ -17,21 +17,21 @@
             <a href="#Antoinette">Antoinette</a>
         </nav>
     </header>
-    <section id="spaces" class="feature hero-image">
+    <section id="spaces" class="feature hero-image" style="background-image: url(./00.Website/assets/_images/marieant.jpg;)">
         <div class = "post-abs">
             <h2 class = "post-abs_tagline">Spaces curated by T</h2>
             <h1 class = "post-abs_heading">Spaces with Intent</h1>
             <a class="post-abs_more" href="#">Click to view</a>
         </div>
     </section>
-    <section id="Deloitte" class="feature hero-image_sp1">
+    <section id="Deloitte" class="feature hero-image_sp1" style="background-image: url(./00.Website/assets/_images/Deloitte.jpg);">
         <div class = "post-abs">
             <h2 class = "post-abs_tagline">Breath taking Natural Lighting</h2>
             <h1 class = "post-abs_heading">Deloitte</h1>
-            <a class="post-abs_more" href="#">Click to view</a>
+            <a class="post-abs_more" href="#Deloitte">Click to view</a>
             </div>
     </section>
-    <section id="Antoinette" class="feature hero-image_sp2">  
+    <section id="Antoinette" class="feature hero-image_sp2" style="background-image: url(./00.Website/assets/_images/vader.jpg);">  
         <div class = "post-abs">
         <h2 class = "post-abs_tagline">Marvelous Dark Corners</h2> 
         <h1 class = "post-abs_heading">Marie Antoinette</h1> 
@@ -40,7 +40,7 @@
     </section>
 </section>
 <section class="navupbtn">
-    <button onclick="topFunction()" ><img src="./02.Identity/02. Logos/top_button.jpg" alt="scroll to top" href="#top"></button>
+    <button onclick="topFunction()" ><img src="./02.Identity/02. Logos/top_button.jpg" alt="scroll to top" href="#main"></button>
 </section>
 <footer>
     <p>Assignment by Tammy</p>
